# static-analysis

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt  gtest.cmake
test/tests/: tests.cpp
